--- a/README
+++ b/README
@@ -2,9 +2,7 @@ What is libdzf?
 ---------------
 libdzf is an embeddable, type-independent, common data structures library based on C99 std.
 
-One of the most difficulties in C programming is to implement data structures with Generic Programming concept, such as template in C++. 
-That is why this began and is like a challenge. Because C does not support Object-Oriented Programming or Generic Programming. 
-But we can make an workaround with preprocessor tricks. So implemented library is basically based on #define directive and those tricks.
+One of the most difficulties in C programming is to implement data structures with Generic Programming, such as template in C++. Because C does not support Object-Oriented Programming and Generic Programming concepts. So now, you might think that it is impossible, but it is not. We can replace those concepts with preprocessor tricks and C99 features. That is why I take up this project.
 
 
 Documentation
@@ -14,21 +12,6 @@ Prerequirements:
 
 $ cd doc
 $ make
-
-
-Commit Message
---------------
-It should be as below, this guide from GNOME.
-
-    prefix   : dzf
-    file-name: util, types, vector, and so on.
-    ---
-    file-name: short message what you did
-
-    Long explanation of what you did, changed. (Optional)
-
-    A link if there is an issue related to this commit. (Optional)
-    ---
 
 
 Contributors
