--- a/README
+++ b/README
@@ -1,9 +1,14 @@
 What is libdzf?
 ---------------
-libdzf is an embeddable, type-independent, common data structures library based on C99 std.
+libdzf is a header-only, template-like common data structures C library based on C99 std.
 
 One of the most difficulties in C programming is to implement data structures with Generic Programming, such as template in C++. Because C does not support Object-Oriented Programming and Generic Programming concepts. So now, you might think that it is impossible, but it is not. We can replace those concepts with preprocessor tricks and C99 features. That is why I take up this project.
 
+Examples
+--------
+$ cd examples
+$ make
+$ ./main
 
 Documentation
 -------------
@@ -12,8 +17,3 @@ Prerequirements:
 
 $ cd doc
 $ make
-
-
-Contributors
-------------
-- Yi-Soo An
